fix spacing

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ textarea {
     border-radius: 2px;
 }
 
-h1, h2, h3, h4, ol, p {
+h1, h2, h3, h4, h5, ol, p {
     margin: 0px
 }
 
